<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.TopEmployerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBackgroundTE"
            android:src="@drawable/background_top_employer"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTopEmployer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/top_employer_detail"
            app:titleTextColor="@color/white"/>

        <View
            android:id="@+id/viewTE"
            android:background="@drawable/bg_home_candidate"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_constraintTop_toTopOf="@id/imgBackgroundTE"
            app:layout_constraintBottom_toBottomOf="@id/imgBackgroundTE"
            app:layout_constraintVertical_bias="1.2"/>

        <ImageView
            android:src="@drawable/logo_top_employer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgBackgroundTE"
            app:layout_constraintBottom_toBottomOf="@id/imgBackgroundTE"
            app:layout_constraintVertical_bias="1.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llTE"

            app:layout_constraintTop_toBottomOf="@id/viewTE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:text="@string/company_name_upper"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/_view"
                android:textSize="18sp"
                android:textColor="@color/purple_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/information_company"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/horizontal_line"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/company_introduction"
                android:textSize="15sp"
                android:textColor="@color/purple_300"
                android:textStyle="bold"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/company_introduction_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="26dp" />

            <TextView
                android:text="@string/company_address"
                android:textSize="15sp"
                android:textColor="@color/purple_300"
                android:textStyle="bold"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/company_address_true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="26dp" />

            <TextView
                android:text="@string/company_scale"
                android:textSize="15sp"
                android:textColor="@color/purple_300"
                android:textStyle="bold"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/company_scale_true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="26dp" />

            <TextView
                android:text="@string/landline_phone"
                android:textSize="15sp"
                android:textColor="@color/purple_300"
                android:textStyle="bold"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/landline_phone_true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="26dp" />

            <TextView
                android:text="@string/province_city"
                android:textSize="15sp"
                android:textColor="@color/purple_300"
                android:textStyle="bold"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/hanoi"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="44dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="26dp" />
        </LinearLayout>

        <View
            android:id="@+id/viewTE1"
            app:layout_constraintTop_toBottomOf="@id/llTE"
            android:background="@drawable/gradient_bg"
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:background="@color/gray_200"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/viewTE1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/job_same_company"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/horizontal_line"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewTE"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>