<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    android:background="@drawable/bg_dialog_success_submission"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/apply_success"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/purple_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        tools:layout_editor_absoluteX="15dp" />

    <ImageButton
        android:id="@+id/imgButtonSuccess"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_change_color"
        android:src="@drawable/icon_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/notify_success_1"
        android:textSize="15sp"
        android:textColor="@color/black_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvJobLocation"
        android:layout_marginBottom="26dp"
        android:text="@string/notify_success_2"
        android:textSize="15sp"
        android:textColor="@color/black_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>