<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg_top_employer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/icon_employer"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/employer"
        android:textSize="10sp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:textColor="@color/purple_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imgEmployerLogo"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvEmployerName"
        android:text="@string/candidate_company"
        android:textColor="@color/black_100"
        android:textSize="15sp"
        android:textStyle="bold"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/see_details"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_text_purple_300"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>