<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/purple_300"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginEnd="80dp"
    android:layout_marginBottom="240dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="80dp">

    <LinearLayout
        android:id="@+id/llDialogCandidate"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="24dp"
            android:src="@drawable/icon_profile"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/mail"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_below="@+id/llDialogCandidate"
        android:background="@drawable/bg_dialog_candidate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewDialogCandidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvLogout"
            android:text="@string/logout"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/purple_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCancel"
            android:text="@string/close"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</RelativeLayout>