<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="18dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgTypicalNews"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_typical_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTitleTypicalNews"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toBottomOf="@id/imgTypicalNews"
            app:layout_constraintStart_toStartOf="@id/imgTypicalNews"
            android:text="@string/title_typical_news"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/purple_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvContentTypicalNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            app:layout_constrainedWidth="false"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTypicalNews"
            app:layout_constraintStart_toStartOf="@id/imgTypicalNews"
            app:layout_constraintEnd_toEndOf="@id/imgTypicalNews"
            android:text="@string/content_typical_news"
            android:textColor="@color/black_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCandidateNameTN"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvContentTypicalNews"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/name_tn"
            android:textSize="15sp"
            android:textColor="@color/purple_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTypicalNewsDate"
            app:layout_constraintTop_toBottomOf="@id/tvContentTypicalNews"
            app:layout_constraintStart_toEndOf="@id/tvCandidateNameTN"
            android:layout_marginTop="4dp"
            android:text="@string/typical_news_date"
            android:textSize="15sp"
            android:textColor="@color/black_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
